# opentelemetry-python

./: .buildinfo  .clomonitor.yml  .codecov.yml  .codespellrc  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .rstcheck.cfg  .travis.yml  0001-Rename-to-auto_instrumentor.patch  AGENTS.md  AUTHORS  CHANGED_FILES  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  app2.py  current_issue.md  dev-requirements  dev-requirements.in  dev-requirements.txt  docs-requirements.in  docs-requirements.txt  eachdist.ini  example.db  faq-and-cookbook.html  fix_changelog.md  fix_summary.txt  food_finder.py  gen-requirements.txt  genindex.html  getting-started.html  (+34 more)
_file_configuration/: README.rst  noxfile.py  pyproject.toml  requirements.txt
_file_configuration/tests/: test_file_configuration.py
codegen/opentelemetry-codegen-json/: .gitignore  README.rst  pyproject.toml  test-requirements.txt
codegen/opentelemetry-codegen-json/tests/: conftest.py  test_end_to_end.py  test_json_codec.py  test_otlp_json_utils.py  test_protobuf_compatibility.py  test_serde.py  test_serdes.py  test_types.py  test_writer.py
exporter/opentelemetry-exporter-http-transport/: README.rst  pyproject.toml  test-requirements.in  test-requirements.latest.txt  test-requirements.oldest.txt  test-requirements.txt
exporter/opentelemetry-exporter-http-transport/tests/: test_load_transport.py  test_otlp_client.py  (+2 more)
exporter/opentelemetry-exporter-jaeger/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-jaeger-proto-grpc/: README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-jaeger-thrift/: README.rst  pyproject.toml  setup.cfg  setup.py
exporter/opentelemetry-exporter-opencensus/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
exporter/opentelemetry-exporter-otlp/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements  test-requirements.txt
exporter/opentelemetry-exporter-otlp-customizer/: README.rst  pyproject.toml
exporter/opentelemetry-exporter-otlp-http-common/: README.rst  pyproject.toml  test-requirements.in  test-requirements.latest.txt  test-requirements.oldest.txt
exporter/opentelemetry-exporter-otlp-json/: README.rst  pyproject.toml
exporter/opentelemetry-exporter-otlp-json-common/: README.rst  benchmark-requirements.txt  pyproject.toml  test-requirements.txt
exporter/opentelemetry-exporter-otlp-json-file/: README.rst  pyproject.toml  test-requirements.txt
exporter/opentelemetry-exporter-otlp-json-http/: README.rst  pyproject.toml  test-requirements.txt
exporter/opentelemetry-exporter-otlp-proto-common/: README.rst  pyproject.toml  test-requirements-0.txt  test-requirements-1.txt  test-requirements-2.txt  test-requirements.txt
exporter/opentelemetry-exporter-otlp-proto-grpc/: .pylintrc  README.rst  lint-requirements.txt  noxfile.py  pyproject.toml  setup.cfg  setup.py  test-requirements-0.txt  test-requirements-1.txt  test-requirements-2.txt  test-requirements.in  test-requirements.latest.txt  test-requirements.oldest.txt  test-requirements.txt
exporter/opentelemetry-exporter-otlp-proto-http/: pyproject.toml  setup.cfg  setup.py  test-requirements-0.txt  test-requirements-1.txt  test-requirements-2.txt  test-requirements.txt
exporter/opentelemetry-exporter-prometheus/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements  test-requirements.txt
exporter/opentelemetry-exporter-zipkin-json/: README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
exporter/opentelemetry-exporter-zipkin-proto-http/: README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
opentelemetry-api/: CHANGELOG.md  pyproject.toml  setup.cfg  setup.py  test-requirements-1.txt  test-requirements.txt  tox.ini
opentelemetry-api/opentelemetry/: backend.py  loader.py
opentelemetry-api/tests/: __init__.py  conftest.py  mypysmoke.py  test_api_safety.py  test_app.py  test_backend.py  test_implementation.py  test_loader.py  test_opentelemetry.py  test_package.py  test_safety.py
opentelemetry-configuration/: README.rst  pyproject.toml  test-requirements.txt
opentelemetry-configuration/codegen/: README.md
opentelemetry-configuration/tests/: test_common.py  test_conversion.py  test_exceptions.py  test_instrumentation.py  test_logger_provider.py  test_meter_provider.py  test_meter_provider_exemplar_filter.py  test_models.py  test_propagator.py  test_resource.py  test_sdk.py  test_tracer_provider.py
opentelemetry-process-context/: README.rst  pyproject.toml  test-requirements.in  test-requirements.txt
opentelemetry-process-context/rust/: Cargo.toml  build.rs
opentelemetry-process-context/tests/: test_process_context.py  test_profiles_context.py
opentelemetry-proto/: CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements-0.txt  test-requirements-1.txt  test-requirements-2.txt  test-requirements.in  test-requirements.latest.txt  test-requirements.oldest.txt  test-requirements.txt
opentelemetry-proto-json/: README.rst  pyproject.toml  test-requirements.in  test-requirements.latest.txt  test-requirements.oldest.txt
opentelemetry-proto-json/tests/: test_proto.py
opentelemetry-proto/tests/: test_proto.py
opentelemetry-sdk/: CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
opentelemetry-sdk/benchmarks/: test_baggage.py
opentelemetry-sdk/codegen/: README.md  dataclass.jinja2
opentelemetry-sdk/tests/: conftest.py  test_app.py  test_conf.py  test_configurator.py  test_environment_variables_internal.py  test_fork_service_instance_id.py  test_implementation.py  test_package.py  test_sdk_configuration.py  test_util.py
opentelemetry-semantic-conventions/: .pylintrc  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements  test-requirements.txt
opentelemetry-semantic-conventions/tests/: test_semconv.py
(+3260 files in other folders)
