[project]
name = "opentelemetry-python"
version = "0.0.0" # This is not used.
requires-python = ">=3.10"
dependencies = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "opentelemetry-proto",
  "opentelemetry-proto-json",
  "opentelemetry-test-utils",
  "opentelemetry-exporter-otlp-proto-grpc",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-exporter-otlp-proto-common",
  "opentelemetry-exporter-zipkin-json",
  "opentelemetry-exporter-prometheus",
  "opentelemetry-propagator-jaeger",
  "opentelemetry-propagator-b3",
  "opentelemetry-codegen-json",
]

# https://docs.astral.sh/uv/reference/settings/
[tool.uv]
package = false # https://docs.astral.sh/uv/reference/settings/#package
required-version = ">=0.6.0"

[tool.uv.sources]
opentelemetry-api = { workspace = true}
opentelemetry-sdk = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry-proto-json = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-test-utils = { workspace = true }
opentelemetry-exporter-otlp-proto-grpc = { workspace = true }
opentelemetry-exporter-otlp-proto-http = { workspace = true }
opentelemetry-exporter-otlp-proto-common = { workspace = true }
opentelemetry-exporter-zipkin-json = { workspace = true }
opentelemetry-exporter-prometheus = {workspace = true }
opentelemetry-propagator-jaeger = { workspace = true }
opentelemetry-propagator-b3 = { workspace = true }
opentelemetry-codegen-json = { workspace = true }

[tool.uv.workspace]
members = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "opentelemetry-proto",
  "opentelemetry-proto-json",
  "exporter/*",
  "propagator/*",
  "codegen/*",
  "tests/opentelemetry-test-utils",
]

exclude = [
  "exporter/opentelemetry-exporter-opencensus",
  "exporter/opentelemetry-exporter-zipkin",
  "exporter/opentelemetry-exporter-zipkin-proto-http",
]

[tool.pytest.ini_options]
addopts = "-rs -v"
log_cli = true

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py310"
line-length = 79
extend-exclude = [
  "*_pb2*.py*",
  "opentelemetry-proto-json/src/*",
]
output-format = "concise"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# pylint: https://github.com/astral-sh/ruff/issues/970
select = [
  "I",   # isort
  "F",   # pyflakes
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "PLC", # pylint convention
  "PLE", # pylint error
  "Q",   # flake8-quotes
  "G",   # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP011", # lru-cache-without-parameters
  "UP015", # redundant-open-modes
  "UP032", # f-string
  "UP034", # extraneous-parentheses
  "UP037", # quoted-annotation
]

ignore = [
  "E501", # line-too-long
  
  # flake8-type-checking rules:
  # This rule enforces to add quotes for type aliases.
  # This rule is unsafe as no static type checker can determine
  # the exact behavior of runtime typing libraries.
  "TC007",
  # This rule is unstable and in preview
  "TC008",
]

[tool.ruff.lint.per-file-ignores]
"docs/**/*.*" = ["PLE"]
"opentelemetry-sdk/tests/_configuration/test_models.py" = ["E402", "PLC0415"]
"shim/opentelemetry-opentracing-shim/tests/*" = ["TID252"]

[tool.ruff.lint.isort]
known-third-party = [
  "psutil",
  "pytest",
  "redis",
  "redis_opentracing",
  "opencensus",
]
known-first-party = ["opentelemetry", "opentelemetry_example_app"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"

include = [
  "opentelemetry-semantic-conventions",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-proto-json",
  "exporter/opentelemetry-exporter-otlp-proto-grpc",
  "exporter/opentelemetry-exporter-otlp-proto-http",
  "codegen/opentelemetry-codegen-json"
]

exclude = [
  "opentelemetry-sdk/tests",
  "opentelemetry-sdk/src/opentelemetry/sdk/_events",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/__init__.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/_view_instrument_match.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/aggregation.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/exemplar/exemplar_reservoir.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/exponential_histogram/",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/export/",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/instrument.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/measurement_consumer.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/metric_reader_storage.py",
  "opentelemetry-sdk/src/opentelemetry/sdk/metrics/_internal/view.py",
  "opentelemetry-sdk/benchmarks",
  "exporter/opentelemetry-exporter-otlp-proto-grpc/tests",
  "exporter/opentelemetry-exporter-otlp-proto-http/tests",
]

# When packages are correct typed add them to the strict list
strict = [
  "opentelemetry-semantic-conventions",
  "opentelemetry-sdk/src/opentelemetry/sdk/environment_variables",
  "opentelemetry-sdk/src/opentelemetry/sdk/resources",
]

[tool.datamodel-codegen]
input = "opentelemetry-sdk/src/opentelemetry/sdk/_configuration/schema.json"
input-file-type = "jsonschema"
output = "opentelemetry-sdk/src/opentelemetry/sdk/_configuration/models.py"
output-model-type = "dataclasses.dataclass"
field-constraints = true
formatters = ["ruff-format", "ruff-check"]
use-standard-collections = true
use-schema-description = true
use-title-as-name = true
use-union-operator = true
target-python-version = "3.10"

[dependency-groups]
dev = [
    "tox",
    "tox-uv>=1",
    "pre-commit",
    "datamodel-code-generator[http]",
    "datamodel-code-generator[ruff]",
]
