# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = opentelemetry-api
description = OpenTelemetry Python API
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python/tree/master/opentelemetry-api
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    typing; python_version<'3.5'
    aiocontextvars; python_version<'3.7' and python_version>='3.5'

[options.packages.find]
where = src
include = opentelemetry.*

[options.entry_points]
opentelemetry_context =
    contextvars_context = opentelemetry.context.contextvars_context:ContextVarsRuntimeContext
    threadlocal_context = opentelemetry.context.threadlocal_context:ThreadLocalRuntimeContext
opentelemetry_meter_provider =
    default_meter_provider = opentelemetry.metrics:DefaultMeterProvider
opentelemetry_tracer_provider =
    default_tracer_provider = opentelemetry.trace:DefaultTracerProvider

[options.extras_require]
test =
