# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = opentelemetry-sdk
description = OpenTelemetry Python SDK
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python/tree/main/opentelemetry-sdk
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api == 1.12.0rc1
    opentelemetry-semantic-conventions == 0.31b0
    setuptools >= 16.0
    dataclasses == 0.8; python_version < '3.7'
    typing-extensions >= 3.7.4

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_tracer_provider =
    sdk_tracer_provider = opentelemetry.sdk.trace:TracerProvider
opentelemetry_traces_exporter =
    console = opentelemetry.sdk.trace.export:ConsoleSpanExporter
opentelemetry_meter_provider =
    sdk_meter_provider = opentelemetry.sdk.metrics:MeterProvider
opentelemetry_log_emitter_provider =
    sdk_log_emitter_provider = opentelemetry.sdk._logs:LogEmitterProvider
opentelemetry_logs_exporter =
    console = opentelemetry.sdk._logs.export:ConsoleLogExporter
opentelemetry_metrics_exporter =
    console = opentelemetry.sdk.metrics.export:ConsoleMetricExporter
opentelemetry_id_generator =
    random = opentelemetry.sdk.trace.id_generator:RandomIdGenerator
opentelemetry_environment_variables =
    sdk = opentelemetry.sdk.environment_variables

[options.extras_require]
test =
